--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
         </a>
         <nav class="menu">
           <ul class="menu__list">
-            <li class="menu__list-item">
+            <li class="menu__list-item menu__list-item--baza">
               <a href="#" class="menu__list-link">База знаний</a>
             </li>
             <li class="menu__list-item">
@@ -62,8 +62,265 @@
       </div>
     </div>
   </div>
-    <main class="main"></main>
-    <footer class="footer"></footer>
+  <main class="main main-home">
+    <div class="catalog">
+      <div class="container">
+        <div class="catalog__block">
+          <div class="catalog__content">
+            <h2 class="catalog__content-title">
+              <span>Каталог</span> корпусов
+            </h2>
+            <p class="catalog__content-text">
+              Оaсновным профилем нашей деятельности - является производство стеклопластиковых корпусов фильтров для очистки воды.
+            </p>
+            <p class="catalog__content-text">
+              Наши композитные фильтры - полностью Российский продукт. <span>Локализация производства достигает 98%
+              </p></span> 
+          </div>
+          <div class="catalog__img">
+            <a href="#" class="catalog__img-item" style="background: url('./images/home/corps-1.jpg') no-repeat;">
+              <div class="catalog__img-title">стеклопластиковые</div>
+            </a>
+            <a href="#" class="catalog__img-item" style="background: url('./images/home/corps-2.jpg') no-repeat;">
+              <div class="catalog__img-title"> металлические</div>
+            </a>
+            <a href="#" class="catalog__img-item" style="background: url('./images/home/corps-3.jpg') no-repeat;">
+              <div class="catalog__img-title"> обратного омуса</div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="industries">
+      <div class="container">
+        <h2 class="industries__title">
+          Отрасли в которых мы работаем 
+            <span>по комплексным проектам</span>
+        </h2>
+        <div class="industries__block">
+          <a href="#" class="industries__block-item" style="background: url('./images/home/industries-1.jpg') no-repeat;">
+            <div class="industries__block-title">пищевое производство</div>
+          </a>
+          <a href="#" class="industries__block-item" style="background: url('./images/home/industries-2.jpg');">
+            <div class="industries__block-title">
+              жилищно-коммунальное хозяйство</div>
+          </a>
+          <a href="#" class="industries__block-item" style="background: url('./images/home/industries-3.jpg') no-repeat;">
+            <div class="industries__block-title">
+              котлы, тепловые пункты объекты энергетики
+            </div>
+          </a>
+          <a href="#" class="industries__block-item" style="background: url('./images/home/industries-4.jpg') no-repeat;">
+            <div class="industries__block-title">
+              Промышленные производства
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="blog-home">
+      <div class="container">
+        <div class="blog-home__block">
+          <div class="blog-home__inner">
+            <h2 class="blog-home__title">Блог и Новости</h2>
+            <a href="#" class="blog-home__link">Перейти ко всем новостям</a>
+          </div>
+          <div class="blog-home__arrows"></div>
+        </div>
+
+        <div class="blog-home__slider">
+          <div class="blog-home__slider-inner">
+            <div class="blog-home__item">
+              <div class="blog-home__wrapper">
+                <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
+                <div class="blog-home__item-calendar">
+                  28 июля 2022
+                </div>
+                <div class="blog-home__slider-block">
+                  <div class="blog-home__item-title">
+                    Условный заголовок статьи который придумал дизайнер
+                  </div>
+                  <p class="blog-home__item-text">
+                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее 
+                  </p>
+                  <a href="#" class="blog-home__item-link">Читать далее</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog-home__item">
+              <div class="blog-home__wrapper">
+                <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
+                <div class="blog-home__item-calendar">
+                  28 июля 2022
+                </div>
+                <div class="blog-home__slider-block">
+                  <div class="blog-home__item-title">
+                    Условный заголовок статьи который придумал дизайнер
+                  </div>
+                  <p class="blog-home__item-text">
+                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее 
+                  </p>
+                  <a href="#" class="blog-home__item-link">Читать далее</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog-home__item">
+              <div class="blog-home__wrapper">
+                <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
+                <div class="blog-home__item-calendar">
+                  28 июля 2022
+                </div>
+                <div class="blog-home__slider-block">
+                  <div class="blog-home__item-title">
+                    Условный заголовок статьи который придумал дизайнер
+                  </div>
+                  <p class="blog-home__item-text">
+                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
+                  </p>
+                  <a href="#" class="blog-home__item-link">Читать далее</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog-home__item">
+              <div class="blog-home__wrapper">
+                <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
+                <div class="blog-home__item-calendar">
+                  28 июля 2022
+                </div>
+                <div class="blog-home__slider-block">
+                  <div class="blog-home__item-title">
+                    Условный заголовок статьи который придумал дизайнер
+                  </div>
+                  <p class="blog-home__item-text">
+                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
+                  </p>
+                  <a href="#" class="blog-home__item-link">Читать далее</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="blog-home__item">
+              <div class="blog-home__wrapper">
+                <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
+                <div class="blog-home__item-calendar">
+                  28 июля 2022
+                </div>
+                <div class="blog-home__slider-block">
+                  <div class="blog-home__item-title">
+                    Условный заголовок статьи который придумал дизайнер
+                  </div>
+                  <p class="blog-home__item-text">
+                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
+                  </p>
+                  <a href="#" class="blog-home__item-link">Читать далее</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__top">
+          <ul class="footer__menu footer__menu--one">
+            <div class="footer__top-title">Компания</div>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link"> О компании</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Услуги</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">База знаний</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Контакты</a>
+            </li>
+          </ul>
+
+          <ul class="footer__menu">
+            <div class="footer__top-title">каталог корпусов</div>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link"> Стеклопластиковые</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link"> Металлопластиковые</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Обратного омуса</a>
+            </li>
+          </ul>
+
+          <ul class="footer__menu">
+            <div class="footer__top-title">отрасли</div>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link"> Пищевое производство</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link"> ЖКХ</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link"> Конлы, тепловые пункты. Объекты энергетики</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link"> Промышленные производства</a>
+            </li>
+          </ul>
+
+          <ul class="footer__menu">
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Производство корпусов</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Каталог корпусов</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Системы водоочистки</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Для проектировщиков</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#" class="footer__menu-link">Монтаж и сервис</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__center">
+          <a href="#" class="footer__center-contact footer__center-contact--address">
+            г. Москва, станция Бекасово-Сортировочная, Литера Е.
+          </a>
+          <a href="mailto:info@aquacell.ru" class="footer__center-contact footer__center-contact--email">
+            info@aquacell.ru
+          </a>
+          <a href="tel:88005005624" class="footer__center-contact footer__center-contact--phone">
+            8 800 500-56-24
+          </a>
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__bottom-wrapper">
+            <a href="#" class="footer__bottom-logo">
+              <img src="./images/home/logo.png" alt="img">
+            </a>
+            <div class="footer__bottom-copyright">
+              © 2022 Aquacell
+            </div>
+          </div>
+          <p class="footer__bottom-text">
+            Используя этот сайт вы соглашаетесь с <span>политикой конфидерциальности и условиями использования</span> Google
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 
