--- a/app/index.html
+++ b/app/index.html
@@ -19,13 +19,13 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a href="#" class="menu__list-link">О компании</a>
+              <a href="./about.html" class="menu__list-link">О компании</a>
             </li>
             <li class="menu__list-item">
               <a href="#" class="menu__list-link active">Наши проекты</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__list-link">Услуги</a>
+              <a href="./services.html" class="menu__list-link">Услуги</a>
             </li>
           </ul>
         </nav>
