--- a/app/about.html
+++ b/app/about.html
@@ -33,10 +33,10 @@
         <nav class="menu">
             <ul class="menu__list">
             <li class="menu__list-item menu__list-item--baza">
-                <a href="#" class="menu__list-link">База знаний</a>
+                <a href="./baza.html" class="menu__list-link">База знаний</a>
             </li>
             <li class="menu__list-item">
-                <a href="#" class="menu__list-link">Контакты</a>
+                <a href="./contacts.html" class="menu__list-link">Контакты</a>
             </li>
             </ul>
         </nav>
