--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,29 @@
   <header class="header">
     <div class="container">
       <div class="header__inner">
+
+        <ul class="mobile-menu">
+          <li class="mobile-menu__item">
+            <a href="./about.html" class="mobile-menu__link">О компании</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./services.html" class="mobile-menu__link">Наши проекты</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./works.html" class="mobile-menu__link">Услуги</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./contact.html" class="mobile-menu__link">База знаний</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./contact.html" class="mobile-menu__link">Контакты</a>
+          </li>
+        </ul>
+        <div class="nav-icon">
+          <div class="nav-icon__middle"></div>
+        </div>
+
+
         <div class="header__btn">
           <img src="./images/home/header-btn.png" alt="img">
         </div>
@@ -35,7 +58,7 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__list-item menu__list-item--baza">
-              <a href="#" class="menu__list-link">База знаний</a>
+              <a href="./baza.html" class="menu__list-link">База знаний</a>
             </li>
             <li class="menu__list-item">
               <a href="#" class="menu__list-link">Контакты</a>
@@ -62,6 +85,7 @@
       </div>
     </div>
   </div>
+  
   <main class="main main-home">
     <div class="catalog">
       <div class="container">
@@ -78,20 +102,20 @@
               </p></span> 
           </div>
           <div class="catalog__img">
-            <a href="#" class="catalog__img-item" style="background: url('./images/home/corps-1.jpg') no-repeat;">
+            <a href="#" class="catalog__img-item" style="background-image: url('./images/home/corps-1.jpg');">
               <div class="catalog__img-title">стеклопластиковые</div>
             </a>
-            <a href="#" class="catalog__img-item" style="background: url('./images/home/corps-2.jpg') no-repeat;">
+            <a href="#" class="catalog__img-item" style="background-image: url('./images/home/corps-2.jpg');">
               <div class="catalog__img-title"> металлические</div>
             </a>
-            <a href="#" class="catalog__img-item" style="background: url('./images/home/corps-3.jpg') no-repeat;">
+            <a href="#" class="catalog__img-item" style="background-image: url('./images/home/corps-3.jpg');">
               <div class="catalog__img-title"> обратного омуса</div>
             </a>
           </div>
         </div>
       </div>
     </div>
-
+ 
     <div class="industries">
       <div class="container">
         <h2 class="industries__title">
@@ -99,19 +123,19 @@
             <span>по комплексным проектам</span>
         </h2>
         <div class="industries__block">
-          <a href="#" class="industries__block-item" style="background: url('./images/home/industries-1.jpg') no-repeat;">
+          <a href="#" class="industries__block-item" style="background-image: url('./images/home/industries-1.jpg');">
             <div class="industries__block-title">пищевое производство</div>
           </a>
-          <a href="#" class="industries__block-item" style="background: url('./images/home/industries-2.jpg');">
+          <a href="#" class="industries__block-item" style="background-image: url('./images/home/industries-2.jpg');">
             <div class="industries__block-title">
               жилищно-коммунальное хозяйство</div>
           </a>
-          <a href="#" class="industries__block-item" style="background: url('./images/home/industries-3.jpg') no-repeat;">
+          <a href="#" class="industries__block-item" style="background-image: url('./images/home/industries-3.jpg');">
             <div class="industries__block-title">
               котлы, тепловые пункты объекты энергетики
             </div>
           </a>
-          <a href="#" class="industries__block-item" style="background: url('./images/home/industries-4.jpg') no-repeat;">
+          <a href="#" class="industries__block-item" style="background-image: url('./images/home/industries-4.jpg');">
             <div class="industries__block-title">
               Промышленные производства
             </div>
@@ -227,6 +251,7 @@
       </div>
     </div>
   </main>
+ 
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
@@ -320,7 +345,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> 
 
 
 
