--- a/app/page.html
+++ b/app/page.html
@@ -17,23 +17,23 @@
         <nav class="menu">
             <ul class="menu__list">
             <li class="menu__list-item">
-                <a href="./about.html" class="menu__list-link">О компании</a>
+                <a href="#" class="menu__list-link">О компании</a>
             </li>
             <li class="menu__list-item">
-                <a href="./projects.html" class="menu__list-link active">Наши проекты</a>
+                <a href="#" class="menu__list-link active">Наши проекты</a>
             </li>
             <li class="menu__list-item">
-                <a href="./services.html" class="menu__list-link">Услуги</a>
+                <a href="#" class="menu__list-link">Услуги</a>
             </li>
             </ul>
         </nav>
-        <a href="./index.html" class="logo">
+        <a href="#" class="logo">
             <img src="./images/home/logo.png" alt="img">
         </a>
         <nav class="menu">
             <ul class="menu__list">
             <li class="menu__list-item menu__list-item--baza">
-                <a href="./baza.html" class="menu__list-link">База знаний</a>
+                <a href="#" class="menu__list-link">База знаний</a>
             </li>
             <li class="menu__list-item">
                 <a href="#" class="menu__list-link">Контакты</a>
@@ -53,68 +53,14 @@
                     <a href="#">Главная</a>
                 </li>
                 <li>
-                    <a class="active-breadcrambs" href="Контакты">Контакты</a>
+                    <a href="#"></a>
                 </li>
             </ul>
         </div>
     </div>
 </header>
 
-<main class="main">
-    <div class="contacts">
-        <div class="container">
-            <h1 class="contacts__title title">
-                Контакты
-            </h1>
-            <p class="contacts__text">
-                <span>Если у вас есть вопросы, нужна консультация инженера 
-                    или специалиста по подбору корпуса,</span> свяжитесь с снами 
-                или задайте свой вопрос через форму обратной связи
-            </p>
-            <div class="contacts__info">
-                <a href="#" class="footer__center-contact footer__center-contact--address contacts__address">
-                г. Москва, станция Бекасово-Сортировочная, Литера Е.
-                </a>
-                <a href="mailto:info@aquacell.ru" class="footer__center-contact footer__center-contact--email contacts__email">
-                info@aquacell.ru
-                </a>
-                <a href="tel:88005005624" class="footer__center-contact footer__center-contact--phone contacts__phone">
-                8 800 500-56-24
-                </a>
-            </div>
-
-            <div class="services-form">
-                <div class="container">
-                    <div class="services-form__block">
-                        <div class="services-form__block-title title">
-                            У Вас <span>есть вопросы?</span> Напишите нам
-                        </div>
-                        <p class="services-form__block-text">
-                           <span>Заполните форму</span> и инженер свяжется 
-                           с вами и поможет подобрать оборудование
-                        </p>
-        
-                        <form action="#" class="form">
-                            <input type="text" class="form__input" placeholder="Фамилия, имя и отчество" required>
-                            <input type="text" class="form__input" placeholder="Название вашей компании и должность" required>
-                            <input type="phone" class="form__input" placeholder="Мобильный телефон" required>
-                            <input type="email" class="form__input" placeholder="E-mail" required>
-                            <textarea class="form__textarea" placeholder="Введите текст вашего сообщения"></textarea>
-                            <button class="form__btn">Отправить заявку</button>
-                            <div class="form__inner-checkbox">
-                                <input type="checkbox" checked class="form__checkbox">
-                                <p class="form__text">
-                                    Даю свое согласие на <span>обработку персональных данных</span>  и согласен <a href="#"> с политикой конфиденциальности</a>
-                                </p>
-                            </div>
-                           
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
+<main class="main"></main>
 
 <footer class="footer">
     <div class="container">
