--- a/app/contacts.html
+++ b/app/contacts.html
@@ -11,6 +11,27 @@
 <header class="header header-page">
     <div class="container">
         <div class="header__inner">
+            <ul class="mobile-menu">
+                <li class="mobile-menu__item">
+                  <a href="./about.html" class="mobile-menu__link">О компании</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./projects.html" class="mobile-menu__link">Наши проекты</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./services.html" class="mobile-menu__link">Услуги</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./baza.html" class="mobile-menu__link">База знаний</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="#" class="mobile-menu__link">Контакты</a>
+                </li>
+            </ul>
+            <div class="nav-icon">
+            <div class="nav-icon__middle"></div>
+            </div>
+
         <div class="header__btn">
             <img src="./images/home/header-btn.png" alt="img">
         </div>
