--- a/app/index.html
+++ b/app/index.html
@@ -19,16 +19,16 @@
             <a href="./about.html" class="mobile-menu__link">О компании</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="./services.html" class="mobile-menu__link">Наши проекты</a>
+            <a href="./projects.html" class="mobile-menu__link">Наши проекты</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="./works.html" class="mobile-menu__link">Услуги</a>
+            <a href="./services.html" class="mobile-menu__link">Услуги</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="./contact.html" class="mobile-menu__link">База знаний</a>
+            <a href="./baza.html" class="mobile-menu__link">База знаний</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="./contact.html" class="mobile-menu__link">Контакты</a>
+            <a href="./contacts.html" class="mobile-menu__link">Контакты</a>
           </li>
         </ul>
         <div class="nav-icon">
@@ -61,7 +61,7 @@
               <a href="./baza.html" class="menu__list-link">База знаний</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__list-link">Контакты</a>
+              <a href="./contacts.html" class="menu__list-link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -143,7 +143,7 @@
         </div>
       </div>
     </div>
-
+ 
     <div class="blog-home">
       <div class="container">
         <div class="blog-home__block">
@@ -157,7 +157,7 @@
         <div class="blog-home__slider">
           <div class="blog-home__slider-inner">
             <div class="blog-home__item">
-              <div class="blog-home__wrapper">
+              <div class="blog-home__wrapper blog-home__wrapper--slider">
                 <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
                 <div class="blog-home__item-calendar">
                   28 июля 2022
@@ -175,7 +175,7 @@
             </div>
 
             <div class="blog-home__item">
-              <div class="blog-home__wrapper">
+              <div class="blog-home__wrapper blog-home__wrapper--slider">
                 <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
                 <div class="blog-home__item-calendar">
                   28 июля 2022
@@ -193,7 +193,7 @@
             </div>
 
             <div class="blog-home__item">
-              <div class="blog-home__wrapper">
+              <div class="blog-home__wrapper blog-home__wrapper--slider">
                 <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
                 <div class="blog-home__item-calendar">
                   28 июля 2022
@@ -211,7 +211,7 @@
             </div>
 
             <div class="blog-home__item">
-              <div class="blog-home__wrapper">
+              <div class="blog-home__wrapper blog-home__wrapper--slider">
                 <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
                 <div class="blog-home__item-calendar">
                   28 июля 2022
@@ -229,7 +229,7 @@
             </div>
 
             <div class="blog-home__item">
-              <div class="blog-home__wrapper">
+              <div class="blog-home__wrapper blog-home__wrapper--slider">
                 <img src="./images/home/blog-slider.jpg" alt="img" class="blog-home__item-img">
                 <div class="blog-home__item-calendar">
                   28 июля 2022
@@ -345,7 +345,7 @@
         </div>
       </div>
     </div>
-  </footer> 
+  </footer>  
 
 
 
