--- a/app/page.html
+++ b/app/page.html
@@ -11,32 +11,52 @@
 <header class="header header-page">
     <div class="container">
         <div class="header__inner">
+            <ul class="mobile-menu">
+                <li class="mobile-menu__item">
+                  <a href="./about.html" class="mobile-menu__link">О компании</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./projects.html" class="mobile-menu__link">Наши проекты</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./services.html" class="mobile-menu__link">Услуги</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./baza.html" class="mobile-menu__link">База знаний</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./contacts.html" class="mobile-menu__link">Контакты</a>
+                </li>
+              </ul>
+              <div class="nav-icon">
+                <div class="nav-icon__middle"></div>
+              </div>
         <div class="header__btn">
             <img src="./images/home/header-btn.png" alt="img">
         </div>
         <nav class="menu">
             <ul class="menu__list">
             <li class="menu__list-item">
-                <a href="#" class="menu__list-link">О компании</a>
+                <a href="./about.html" class="menu__list-link">О компании</a>
             </li>
             <li class="menu__list-item">
                 <a href="#" class="menu__list-link active">Наши проекты</a>
             </li>
             <li class="menu__list-item">
-                <a href="#" class="menu__list-link">Услуги</a>
+                <a href="./services.html" class="menu__list-link">Услуги</a>
             </li>
             </ul>
         </nav>
-        <a href="#" class="logo">
+        <a href="./index.html" class="logo">
             <img src="./images/home/logo.png" alt="img">
         </a>
         <nav class="menu">
             <ul class="menu__list">
             <li class="menu__list-item menu__list-item--baza">
-                <a href="#" class="menu__list-link">База знаний</a>
+                <a href="./baza.html" class="menu__list-link">База знаний</a>
             </li>
             <li class="menu__list-item">
-                <a href="#" class="menu__list-link">Контакты</a>
+                <a href="./contacts.html" class="menu__list-link">Контакты</a>
             </li>
             </ul>
         </nav>
@@ -53,7 +73,7 @@
                     <a href="#">Главная</a>
                 </li>
                 <li>
-                    <a href="#"></a>
+                    <a class="active-breadcrambs" href="#"></a>
                 </li>
             </ul>
         </div>
@@ -125,7 +145,7 @@
                 <a href="#" class="footer__menu-link">Для проектировщиков</a>
             </li>
             <li class="footer__menu-item">
-                <a href="#" class="footer__menu-link">Монтаж и сервис</a>
+                <a href="./instalation.html" class="footer__menu-link">Монтаж и сервис</a>
             </li>
             </ul>
         </div>
