--- a/app/services.html
+++ b/app/services.html
@@ -11,6 +11,28 @@
 <header class="header header-page">
     <div class="container">
         <div class="header__inner">
+            
+            <ul class="mobile-menu">
+                <li class="mobile-menu__item">
+                  <a href="./about.html" class="mobile-menu__link">О компании</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./projects.html" class="mobile-menu__link">Наши проекты</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="#" class="mobile-menu__link">Услуги</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./baza.html" class="mobile-menu__link">База знаний</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./contacts.html" class="mobile-menu__link">Контакты</a>
+                </li>
+            </ul>
+            <div class="nav-icon">
+            <div class="nav-icon__middle"></div>
+            </div>
+
         <div class="header__btn">
             <img src="./images/home/header-btn.png" alt="img">
         </div>
@@ -63,7 +85,7 @@
 <main class="main">
     <div class="services">
         <div class="container">
-            <h1 class="services__title title"></h1>
+            <h1 class="services__title title">Услуги</h1>
             <div class="tabs">
                 <div class="tabs__item">
                     <button class="tabs__item-btn">
@@ -212,7 +234,7 @@
             </div>
         </div>
     </div>
-
+ 
     <div class="services-industries">
         <div class="container">
             <h3 class="services-industries-title title">
@@ -306,7 +328,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div> 
 </main>
 
 <footer class="footer">
