--- a/app/about.html
+++ b/app/about.html
@@ -11,6 +11,27 @@
 <header class="header header-page">
     <div class="container">
         <div class="header__inner">
+
+            <ul class="mobile-menu">
+                <li class="mobile-menu__item">
+                  <a href="#" class="mobile-menu__link">О компании</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./projects.html" class="mobile-menu__link">Наши проекты</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./services.html" class="mobile-menu__link">Услуги</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./baza.html" class="mobile-menu__link">База знаний</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./contacts.html" class="mobile-menu__link">Контакты</a>
+                </li>
+              </ul>
+              <div class="nav-icon">
+                <div class="nav-icon__middle"></div>
+              </div>
         <div class="header__btn">
             <img src="./images/home/header-btn.png" alt="img">
         </div>
@@ -79,7 +100,7 @@
                         Компания предлагает решения следующих задач по очистке и подготовке воды из скважин и поверхностных источников: обезжелезивание, опреснение, дегазация, повышение давления, снижение жесткости, обеззараживание, осветление, и другие.
                     </p>
                 </div>
-                <div class="about__img" style="background: url('./images/about/about.jpg') no-repeat;">
+                <div class="about__img" style="background-image: url('./images/about/about.jpg') ;">
                     <div class="about__inner">
                         <div class="about__wrapper">
                             <div class="about__img-title">52</div>
@@ -104,7 +125,7 @@
             </div>
         </div>
     </div>
-
+ 
     <div class="mission">
         <div class="container">
             <div class="mission__block">
@@ -160,7 +181,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> 
 </main>
 
 <footer class="footer">
