--- a/app/designers.html
+++ b/app/designers.html
@@ -377,7 +377,7 @@
                 <a href="#" class="footer__menu-link">Каталог корпусов</a>
             </li>
             <li class="footer__menu-item">
-                <a href="#" class="footer__menu-link">Системы водоочистки</a>
+                <a href="./technologies.html" class="footer__menu-link">Системы водоочистки</a>
             </li>
             <li class="footer__menu-item">
                 <a href="#" class="footer__menu-link">Для проектировщиков</a>
