--- a/app/index.html
+++ b/app/index.html
@@ -303,19 +303,19 @@
 
           <ul class="footer__menu">
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Производство корпусов</a>
+              <a href="./production.html" class="footer__menu-link">Производство корпусов</a>
             </li>
             <li class="footer__menu-item">
               <a href="#" class="footer__menu-link">Каталог корпусов</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Системы водоочистки</a>
+              <a href="./technologies.html" class="footer__menu-link">Системы водоочистки</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Для проектировщиков</a>
+              <a href="./designers.html" class="footer__menu-link">Для проектировщиков</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Монтаж и сервис</a>
+              <a href="./production.html" class="footer__menu-link">Монтаж и сервис</a>
             </li>
           </ul>
         </div>
