--- a/app/technologies.html
+++ b/app/technologies.html
@@ -11,7 +11,6 @@
 <header class="header header-page">
     <div class="container">
         <div class="header__inner">
-            
             <ul class="mobile-menu">
                 <li class="mobile-menu__item">
                   <a href="./about.html" class="mobile-menu__link">О компании</a>
@@ -20,7 +19,7 @@
                   <a href="./projects.html" class="mobile-menu__link">Наши проекты</a>
                 </li>
                 <li class="mobile-menu__item">
-                  <a href="#" class="mobile-menu__link">Услуги</a>
+                  <a href="./services.html" class="mobile-menu__link">Услуги</a>
                 </li>
                 <li class="mobile-menu__item">
                   <a href="./baza.html" class="mobile-menu__link">База знаний</a>
@@ -28,11 +27,10 @@
                 <li class="mobile-menu__item">
                   <a href="./contacts.html" class="mobile-menu__link">Контакты</a>
                 </li>
-            </ul>
-            <div class="nav-icon">
-            <div class="nav-icon__middle"></div>
-            </div>
-
+              </ul>
+              <div class="nav-icon">
+                <div class="nav-icon__middle"></div>
+              </div>
         <div class="header__btn">
             <img src="./images/home/header-btn.png" alt="img">
         </div>
@@ -45,7 +43,7 @@
                 <a href="#" class="menu__list-link active">Наши проекты</a>
             </li>
             <li class="menu__list-item">
-                <a href="#" class="menu__list-link">Услуги</a>
+                <a href="./services.html" class="menu__list-link">Услуги</a>
             </li>
             </ul>
         </nav>
@@ -75,7 +73,7 @@
                     <a href="#">Главная</a>
                 </li>
                 <li>
-                    <a class="active-breadcrambs" href="#">Услуги</a>
+                    <a class="active-breadcrambs" href="#">Системы водоочистки</a>
                 </li>
             </ul>
         </div>
@@ -85,22 +83,24 @@
 <main class="main">
     <div class="services">
         <div class="container">
-            <h1 class="services__title title">Услуги</h1>
+            <h1 class="services__title title">Технологии водоочистки</h1>
             <div class="tabs">
                 <div class="tabs__item">
                     <button class="tabs__item-btn">
-                        АНАЛИЗЫ ВОДЫ И СТОКА. ЭКСПЕРТНЫЕ ЗАКЛЮЧЕНИЯ</button>
-                    <button class="tabs__item-btn">СТРОИТЕЛЬСТВО ВЗУ</button>
+                        МЕМБРАННЫЕ СИСТЕМЫ AQUACELL</button>
+                    <button class="tabs__item-btn">СИСТЕМЫ ОБЕЗЖЕЛЕЗИВАНИЯ AQUCELL</button>
                     <button class="tabs__item-btn">
-                        АУДИТ ОБЪЕКТОВ ВОДОСНАБЖЕНИЯ, ВОДОПОДГОТОВКА ВОДООТВЕДЕНИЯ
+                        ИОНООБМЕННЫЕ СИСТЕМЫ AQUACELL
                     </button>
-                    <button class="tabs__item-btn">МОНТАЖНО-СЕРВИСНАЯ СЛУЖБА
+                    <button class="tabs__item-btn">НАСОСНЫЕ СТАНЦИИ И АГРЕГАТЫ
                     </button>
-                    <button class="tabs__item-btn">ДЛЯ ПРОЕКТИРОВЩИКОВ</button>
+                    <button class="tabs__item-btn">
+                        СИСТЕМЫ АВТОМАТИЗАЦИИ И ДИСПЕТЧЕРИЗАЦИИ СТАНЦИЙ ОЧИСТКИ ВОДЫ
+                    </button>
                 </div>
                 <div class="tabs__content">
                     <div class="tabs__content-title">
-                        Анализы воды и стока. <span>Экспертные заключения</span>
+                        Мембранные системы AQUACELL-1
                     </div>
                     <p class="tabs__content-text">
                         <span>
@@ -124,7 +124,7 @@
 
                 <div class="tabs__content">
                     <div class="tabs__content-title">
-                        СТРОИТЕЛЬСТВО ВЗУ
+                        Мембранные системы AQUACELL-2
                     </div>
                     <p class="tabs__content-text">
                         <span>
@@ -148,7 +148,7 @@
 
                 <div class="tabs__content">
                     <div class="tabs__content-title">
-                        АУДИТ ОБЪЕКТОВ ВОДОСНАБЖЕНИЯ, ВОДОПОДГОТОВКА ВОДООТВЕДЕНИЯ
+                        Мембранные системы AQUACELL-3
                     </div>
                     <p class="tabs__content-text">
                         <span>
@@ -172,7 +172,7 @@
 
                 <div class="tabs__content">
                     <div class="tabs__content-title">
-                        МОНТАЖНО-СЕРВИСНАЯ СЛУЖБА
+                        Мембранные системы AQUACELL-4
                     </div>
                     <p class="tabs__content-text">
                         <span>
@@ -196,7 +196,7 @@
 
                 <div class="tabs__content">
                     <div class="tabs__content-title">
-                        ДЛЯ ПРОЕКТИРОВЩИКОВ
+                        Мембранные системы AQUACELL-5
                     </div>
                     <p class="tabs__content-text">
                         <span>
@@ -221,83 +221,120 @@
         </div>
     </div>
 
-    <div class="services-analysis">
+    <div class="areas">
         <div class="container">
-            <div class="services-analysis__block">
-                <p class="services-analysis__block-text">
-                    Компания ООО «ГК Гост» AQUACELL™  проводит химический анализ природных и сточных вод, отобранных заказчиком, либо по желанию заказчика специалист компании выезжает самостоятельно на объект. При анализе воды и почвы исследуются — физические, общесанитарные и специфические показатели (металлы и органические компоненты), в соответствии с областью аккредитации.   
-                </p>
+            <div class="areas__title title">
 
-                <p class="services-analysis__block-text">
-                    По результатам анализа природных и сточных вод специалисты компании дают рекомендации по усовершенствованию способов очистки сточной воды, кроме того на основании результатов анализа осуществляется разработка принципиальной технологической схемы очистки воды, а заказчику выдается протокол результатов анализа.
-                </p>
             </div>
-        </div>
-    </div>
- 
-    <div class="services-industries">
-        <div class="container">
-            <h3 class="services-industries-title title">
-                Отрасли <span>в которых мы работаем</span>
-            </h3>
-            <div class="services-industries__block">
-                <div class="services-industries__item">
-                    <div class="services-industries__item-img">
-                        <img src="./images/industries/industries-1.png" alt="img">
+            <div class="areas__block">
+                <div class="areas__item">
+                    <div class="areas__item-img">
+                        <img src="./images/technology/areas-1.png" alt="img">
                     </div>
-                    <p class="services-industries__item-text">
+                    <p class="areas__item-text">
                         Водоподготовка для ЖКХ
                     </p>
                 </div>
-                <div class="services-industries__item">
-                    <div class="services-industries__item-img">
-                        <img src="./images/industries/industries-2.png" alt="img">
+
+                <div class="areas__item">
+                    <div class="areas__item-img">
+                        <img src="./images/technology/areas-2.png" alt="img">
                     </div>
-                    <p class="services-industries__item-text">
+                    <p class="areas__item-text">
                         Водоподготовка для пищевого производства
                     </p>
                 </div>
-                <div class="services-industries__item">
-                    <div class="services-industries__item-img">
-                        <img src="./images/industries/industries-3.png" alt="img">
+
+                <div class="areas__item">
+                    <div class="areas__item-img">
+                        <img src="./images/technology/areas-3.png" alt="img">
                     </div>
-                    <p class="services-industries__item-text">
-                        Котельные, тепловые пункты объекты
+                    <p class="areas__item-text">
+                        Котельные, тепловые пункты объекты энергетики
                     </p>
                 </div>
-                <div class="services-industries__item">
-                    <div class="services-industries__item-img">
-                        <img src="./images/industries/industries-4.png" alt="img">
+
+                <div class="areas__item">
+                    <div class="areas__item-img">
+                        <img src="./images/technology/areas-4.png" alt="img">
                     </div>
-                    <p class="services-industries__item-text">
+                    <p class="areas__item-text">
                         Сельское хозяйство
                     </p>
                 </div>
-                <div class="services-industries__item">
-                    <div class="services-industries__item-img">
-                        <img src="./images/industries/industries-5.png" alt="img">
+            </div>
+
+            <div class="areas-table">
+                <div class="areas-table__item">
+                    <div class="areas-table__item-title">
+                        модель
                     </div>
-                    <p class="services-industries__item-text">
-                        Нефте-газовый сектор
-                    </p>
+                    <div class="areas-table__item-title">
+                        SF-IR-A-04T1x0844-M77  
+                    </div>
+                    <div class="areas-table__item-title">
+                        SF-IR-A-04T1x0844-M77  
+                    </div>
                 </div>
-                <div class="services-industries__item">
-                    <div class="services-industries__item-img">
-                        <img src="./images/industries/industries-6.png" alt="img">
+
+                <div class="areas-table__item">
+                    <div class="areas-table__item-title">
+                        производительность, м3/ч 
                     </div>
-                    <p class="services-industries__item-text">
-                        Микроэлектроника и химическое производство
-                    </p>
+                    <div class="areas-table__item-title">0,4-0,6</div>
+                    <div class="areas-table__item-title">0,4-0,6</div>
                 </div>
-                <div class="services-industries__item">
-                    <div class="services-industries__item-img">
-                        <img src="./images/industries/industries-7.png" alt="img">
+
+                <div class="areas-table__item">
+                    <div class="areas-table__item-title">
+                        Объем воды для промывки, м3 
                     </div>
-                    <p class="services-industries__item-text">
-                        Линии разлива бутилированной воды
-                    </p>
+                    <div class="areas-table__item-title">
+                        0,2
+                    </div>
+                    <div class="areas-table__item-title"> 0,2</div>
+                </div>
+
+                <div class="areas-table__item">
+                    <div class="areas-table__item-title">
+                        Габариты установки (Д х Ш х В)
+                    </div>
+                    <div class="areas-table__item-title">
+                        206 x 1350      
+                    </div>
+                    <div class="areas-table__item-title">206 x 1350 </div>
                 </div>
             </div>
+
+            <div class="designers-top__box">
+                <a href="#" class="designers-top__item designers-top__item-technology">
+                    <div class="designers-top__item-title designers-top__item-title-technology">сертификат1</div>
+                </a>
+                <a href="#" class="designers-top__item designers-top__item-technology">
+                    <div class="designers-top__item-title designers-top__item-title-technology">сертификат2</div>
+                </a>
+                <a href="#" class="designers-top__item designers-top__item-technology">
+                    <div class="designers-top__item-title designers-top__item-title-technology">сертификат3</div>
+                </a>
+            </div>
+
+            <h2 class="areas__subtitle title">
+                Для заказа оборудовавания <span>свяжитесь с нами</span>
+            </h2>
+
+            <div class="footer__center footer__center-technology">
+                <a href="#" class="footer__center-contact footer__center-contact--address">
+                г. Москва, станция Бекасово-Сортировочная, Литера Е.
+                </a>
+                <a href="mailto:info@aquacell.ru" class="footer__center-contact footer__center-contact--email">
+                info@aquacell.ru
+                </a>
+                <a href="tel:88005005624" class="footer__center-contact footer__center-contact--phone">
+                8 800 500-56-24
+                </a>
+            </div>
+
+            <a href="#" class="areas__btn">заполнить опросный лист</a>
         </div>
     </div>
 
@@ -305,7 +342,7 @@
         <div class="container">
             <div class="services-form__block">
                 <div class="services-form__block-title title">
-                    Вам нужна<span>помощь с подбором?</span>
+                    Вам нужна <span>помощь с подбором?</span>
                 </div>
                 <p class="services-form__block-text">
                    <span>Заполните форму</span> и инженер свяжется 
@@ -388,13 +425,13 @@
                 <a href="#" class="footer__menu-link">Каталог корпусов</a>
             </li>
             <li class="footer__menu-item">
-                <a href="./technologies.html" class="footer__menu-link">Системы водоочистки</a>
+                <a href="#" class="footer__menu-link">Системы водоочистки</a>
             </li>
             <li class="footer__menu-item">
                 <a href="#" class="footer__menu-link">Для проектировщиков</a>
             </li>
             <li class="footer__menu-item">
-                <a href="#" class="footer__menu-link">Монтаж и сервис</a>
+                <a href="./instalation.html" class="footer__menu-link">Монтаж и сервис</a>
             </li>
             </ul>
         </div>
